--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,48 @@
-<h2>Expense Tracker</h2>
+<div class="container index-container my-5">
+  <div class="row d-flex justify-content-center">
+
+    <!-- expense item -->
+    <ul class="list-group">
+      <div class="row d-flex justify-content-center">
+        <div class="col-12">
+          {{#each records}}
+          <div class="row mt-3">
+            <div class="col-auto  mr-auto">
+              <div>{{ this.name }}</div>
+              <div>{{ this.date }}</div>
+            </div>
+            <div class="col col-auto text-end">{{this.amount}}</div>
+            <div class="col col-auto">
+              <a href="./records/{{ this._id }}/edit">編輯</a>
+              <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#recordDeleteModal"
+                data-id="{{this._id}}">
+                刪除
+              </button>
+            </div>
+          </div>
+          {{/each}}
+        </div>
+      </div>
+    </ul>
+
+    <!-- Modal -->
+    <div class="modal fade" id="recordDeleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">確定要刪除此筆支出嗎?</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+            <form action="/records/:id?_method=DELETE" method="POST" style="display: inline;">
+              <button type="button" class="btn btn-danger">刪除</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
