--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,6 +7,7 @@
         <div class="col-12">
           {{#each records}}
           <div class="row mt-3">
+            <i class="{{this.icon}}"></i>
             <div class="col-auto  mr-auto">
               <div>{{ this.name }}</div>
               <div>{{ this.date }}</div>
