--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,6 +22,13 @@
             </div>
           </div>
           {{/each}}
+
+          <div class="container col-md-5 mt-5">
+            <a href="/records/new">
+              <button type="button" class="btn btn-warning">新增支出</button>
+            </a>
+          </div>
+
         </div>
       </div>
     </ul>
