--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>expense-tracker</title>
   <link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.min.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="/stylesheets/records _style.css">
 </head>
 
 <body>
@@ -32,6 +33,7 @@
     integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/63c347561c.js" crossorigin="anonymous"></script>
+  <script src="/javascripts/records.js"></script>
 </body>
 
 </html>
