--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,56 +1,74 @@
 <div class="container index-container my-5">
-  <div class="row d-flex justify-content-center">
+  <div class="justify-content-center">
+    <div class="col-12 col-md-8 mx-auto">
 
-    <!-- expense item -->
-    <ul class="list-group" id="data-panel">
-      <div class="row d-flex justify-content-center">
-        <div class="col-12">
-          {{#each records}}
-          <div class="row mt-3">
-            <i class="{{this.icon}}"></i>
-            <div class="col-auto  mr-auto">
-              <div>{{ this.name }}</div>
-              <div>{{ this.date }}</div>
+      <!-- select category -->
+      <div class="col-8 mx-auto">
+        <form action="/" method="GET" class="mt-3">
+          <select class="form-select" name="categorySelect" id="categorySelect" onchange="submit()">
+            <option value="">類別</option>
+            {{#each categories}}
+            <option value="{{this.categoryName}}" {{#if (isSelected this.categoryName ../selectedCategory) }} selected
+              {{/if}}>
+              {{this.categoryName}}</option>
+            {{/each}}
+          </select>
+        </form>
+      </div>
+
+      <!-- expense item -->
+      <ul class="list-group" id="data-panel">
+        <div class="justify-content-center">
+          <div class="col-12">
+            {{#each records}}
+            <div class="row mt-3">
+              <i class="{{this.icon}}"></i>
+              <div class="col-auto  mr-auto">
+                <div>{{ this.name }}</div>
+                <div>{{ this.date }}</div>
+              </div>
+              <div class="col col-auto text-end">{{this.amount}}</div>
+              <div class="col col-auto">
+                <a href="./records/{{ this._id }}/edit">編輯</a>
+                <button type="button" class="btn btn-danger" id="delete-btn" data-toggle="modal"
+                  data-target="#recordDeleteModal" data-id="{{this._id}}">
+                  刪除
+                </button>
+              </div>
             </div>
-            <div class="col col-auto text-end">{{this.amount}}</div>
-            <div class="col col-auto">
-              <a href="./records/{{ this._id }}/edit">編輯</a>
-              <button type="button" class="btn btn-danger" id="delete-btn" data-toggle="modal"
-                data-target="#recordDeleteModal" data-id="{{this._id}}">
-                刪除
+            {{/each}}
+
+            <div class="container col-md-5 mt-5">
+              <a href="/records/new">
+                <button type="button" class="btn btn-warning">新增支出</button>
+              </a>
+            </div>
+
+          </div>
+        </div>
+      </ul>
+
+      <!-- Modal -->
+      <div class="modal fade" id="recordDeleteModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">確定要刪除此筆支出嗎?</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
               </button>
             </div>
-          </div>
-          {{/each}}
-
-          <div class="container col-md-5 mt-5">
-            <a href="/records/new">
-              <button type="button" class="btn btn-warning">新增支出</button>
-            </a>
-          </div>
-
-        </div>
-      </div>
-    </ul>
-
-    <!-- Modal -->
-    <div class="modal fade" id="recordDeleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">確定要刪除此筆支出嗎?</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-            <form id="modal-delete" method="POST">
-              <button type="submit" class="btn btn-danger">刪除</button>
-            </form>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+              <form id="modal-delete" method="POST">
+                <button type="submit" class="btn btn-danger">刪除</button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
+
     </div>
   </div>
 </div>
