feat: fix delete function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -61,7 +61,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-              <form id="modal-delete" method="POST">
+              <form id="modal-delete" action="" method="POST">
                 <button type="submit" class="btn btn-danger">刪除</button>
               </form>
             </div>
