--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,8 +3,8 @@
     <div class="col-12 col-md-8 mx-auto">
 
       <!-- select category -->
-      <div class="col-8 mx-auto">
-        <form action="/" method="GET" class="mt-3">
+      <div class="d-flex justify-content-center my-3">
+        <form action="/" method="GET">
           <select class="form-select" name="categorySelect" id="categorySelect" onchange="submit()">
             <option value="">類別</option>
             {{#each categories}}
@@ -16,6 +16,11 @@
         </form>
       </div>
 
+      <div class="d-flex justify-content-center my-3">
+        <div>總金額：</div>
+        <div class="totalAmount">{{totalAmount}}</div>
+      </div>
+
       <!-- expense item -->
       <ul class="list-group" id="data-panel">
         <div class="justify-content-center">
@@ -25,7 +30,7 @@
               <i class="{{this.icon}}"></i>
               <div class="col-auto  mr-auto">
                 <div>{{ this.name }}</div>
-                <div>{{ this.date }}</div>
+                <div>{{ toDate this.date }}</div>
               </div>
               <div class="col col-auto text-end">{{this.amount}}</div>
               <div class="col col-auto">
