--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,7 +1,7 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-12 col-md-8 mx-auto">
-      <form action="/records" method="POST" id="form" novalidate>
+      <form action="/records" method="POST" id="form" class="needs-validate" novalidate>
 
         <div class="row mb-3">
           <div class="col-auto">*必填欄位</div>
@@ -34,6 +34,15 @@
               <option>{{this.categoryName}}</option>
               {{/each}}
             </select>
+          </div>
+          <div class="valid-feedback">Good!</div>
+          <div class="invalid-feedback">This field is required!</div>
+        </div>
+
+        <div class="row mb-3">
+          <label for="amount">商家*</label>
+          <div class="col-sm-6">
+            <input type="text" class="form-control" id="merchant" name="merchant" required>
           </div>
           <div class="valid-feedback">Good!</div>
           <div class="invalid-feedback">This field is required!</div>
