add select-month function

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -43,7 +43,7 @@
         <div class="row mb-3">
           <label for="amount">商家*</label>
           <div class="col-sm-6">
-            <input type="text" class="form-control" id="merchant" name="merchant" required>
+            <input type="text" class="form-control" id="merchant" name="merchant" value="{{record.merchant}}" required>
           </div>
           <div class="valid-feedback">Good!</div>
           <div class="invalid-feedback">This field is required!</div>
