feat: add isAuthenticated to display different view templates

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,6 +19,12 @@
           家庭記帳本
         </strong>
       </a>
+      </a>
+      {{#if isAuthenticated}}
+      <a href="/users/logout" class="btn btn-outline-light">Logout</a>
+      {{else}}
+      <a href="/users/login" class="btn btn-outline-light">Login</a>
+      {{/if}}
     </nav>
   </header>
 
