--- a/views/index.hbs
+++ b/views/index.hbs
@@ -44,45 +44,49 @@
         <li class="list-group-item d-flex justify-content-between align-items-center">
           <i class="{{this.icon}}"></i>
           <div class="col-auto  mr-auto">
-            <div>{{ this.name }}</div>
-            <div>{{ toDate this.date }}</div>
+            <div>{{this.name}}</div>
+            <div>{{toDate this.date}}</div>
           </div>
           <div class="col col-auto mr-5">{{this.merchant}}</div>
           <div class="col col-auto mr-5">{{this.amount}}</div>
           <span>
             <a href="./records/{{ this._id }}/edit" class="btn btn-secondary" id="edit-btn">編輯</a>
-            <button type="button" class="btn btn-danger" id="delete-btn" data-toggle="modal"
-              data-target="#recordDeleteModal" data-id="{{this._id}}">刪除</button>
+            <button type="button" class="btn btn-danger" data-toggle="modal"
+              data-target="#recordDeleteModal{{this._id}}">刪除</button>
           </span>
         </li>
-        {{/each}}
       </ul>
 
-      <div class="d-flex justify-content-center mt-5">
-        <a href="/records/new">
-          <button type="button" class="btn btn-warning">新增支出</button>
-        </a>
-      </div>
-
       <!-- Modal -->
-      <div class="modal fade" id="recordDeleteModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+      <div class="modal fade" id="recordDeleteModal{{this._id}}" tabindex="-1" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">確定要刪除此筆支出嗎?</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Delete Item</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
+            <div class="modal-body">
+              您確定要刪除"{{this.name}}"嗎？
+            </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-              <form id="modal-delete" action="" method="POST">
+              <form action="/records/{{this._id}}?_method=DELETE" method="POST">
                 <button type="submit" class="btn btn-danger">刪除</button>
               </form>
             </div>
           </div>
         </div>
+      </div>
+      <!-- end Modal -->
+      {{/each}}
+
+      <div class="d-flex justify-content-center mt-5">
+        <a href="/records/new">
+          <button type="button" class="btn btn-warning">新增支出</button>
+        </a>
       </div>
 
     </div>
