--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-between">
       <a class="navbar-brand" href="/">
         <strong style="font-size: 2vw;">
-          家庭記帳本
+          {{#if user.name}}{{user.name}} 的{{/if}}家庭記帳本
         </strong>
       </a>
       </a>
