--- a/views/new.hbs
+++ b/views/new.hbs
@@ -51,7 +51,7 @@
         <div class="row mb-3">
           <label for="amount">金額*</label>
           <div class="col-sm-6">
-            <input type="number" class="form-control" id="amount" name="amount" required>
+            <input type="number" class="form-control" id="amount" name="amount" min="0" required>
           </div>
           <div class="valid-feedback">Good!</div>
           <div class="invalid-feedback">This field is required!</div>
