--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -20,7 +20,7 @@
         <div class="row mb-3">
           <label for="date">日期*</label>
           <div class="col-sm-6">
-            <input type="date" class="form-control" id="date" name="date" value="{{toDate record.date}}" required>
+            <input type="date" class="form-control" id="date" name="date" value="{{convertDate record.date}}" required>
           </div>
           <div class="valid-feedback">Good!</div>
           <div class="invalid-feedback">This field is required!</div>
