--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
 
       <!-- select category -->
       <div class="d-flex justify-content-center my-3">
-        <form action="/filter" method="GET">
+        <form action="/" method="GET">
           <select class="form-select" name="monthSelect" id="monthSelect" onchange="submit()">
             <option value="">月份</option>
             <option value="1" {{#if (isSelected "1" selectedMonth)}} selected {{/if}}>一月</option>
